<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <EditText
        android:id="@+id/et_lng"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/loc_lng"
        android:inputType="numberDecimal"
        android:text="@string/loc_lng_value" />

    <EditText
        android:id="@+id/et_lat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/loc_lat"
        android:inputType="numberDecimal"
        android:text="@string/loc_lat_value"
        app:layout_constraintTop_toBottomOf="@id/et_lng" />

    <EditText
        android:id="@+id/et_pic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pic_path"
        android:inputType="text"
        android:text="@string/pic_path_value"
        app:layout_constraintTop_toBottomOf="@id/et_lat" />

    <EditText
        android:id="@+id/et_target"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/target"
        android:inputType="text"
        android:text="@string/target_value"
        app:layout_constraintTop_toBottomOf="@id/et_pic" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onclick"
        android:text="@string/save"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</android.support.constraint.ConstraintLayout>